--- a/.posthtmlrc
+++ b/.posthtmlrc
@@ -50,7 +50,7 @@
             "value": "<i>Jun Yi Zhang is a Graphics reporter. She can be contacted at </i><a href=\"mailto:junyi.zhang@columbiaspectator.com\"><i>junyi.zhang@columbiaspectator.com</i></a><i>.</i>"
           }
         ],
-        "headline": "The U.S. and Ivy League schools were late to respond to COVID-19.",
+        "headline": "From baby carriage food carts to fusion soul food spots: A look into Harlem’s complex restaurant scene",
         "date": "October 17, 2019",
         "byline": "By <a href=\"https://www.columbiaspectator.com/contributors/Charlotte-Li\">Charlotte Li</a>\nEdited by <a href=\"https://www.columbiaspectator.com/contributors/Jun-Yi-Zhang\">Jun Yi Zhang</a>",
         "USE_NEWS_NAV": true,
